layout bug fixes

--- a/css/about.css
+++ b/css/about.css
@@ -14,6 +14,8 @@
   font-size: 2rem;
   margin-bottom: 1rem;
   color: #002F6C;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 #about h2 {
